-
Bug
-
Resolution: Done
-
P1: Critical
-
6.3, 6.4
-
None
-
-
cc902136c6 (qt/qtdeclarative/dev) cc902136c6 (qt/tqtc-qtdeclarative/dev) a9747591d0 (qt/qtdeclarative/6.3) a9747591d0 (qt/tqtc-qtdeclarative/6.3) a9747591d0 (qt/tqtc-qtdeclarative/6.3.1)
If developer_build is enabled in webOS's qtdeclarative yocto recipe, the build will break because of an unused parameter.
| /home/janne/workdir/webOS/build-webos/BUILD/work/qemux86_64-webos-linux/qtdeclarative/6.3.1-r0/git/src/quick/util/qquickdeliveryagent.cpp: In member function 'void QQuickDeliveryAgentPrivate::flushFrameSynchronousEvents(QQuickWindow*)': | /home/janne/workdir/webOS/build-webos/BUILD/work/qemux86_64-webos-linux/qtdeclarative/6.3.1-r0/git/src/quick/util/qquickdeliveryagent.cpp:1565:76: error: unused parameter 'win' [-Werror=unused-parameter] | 1565 | void QQuickDeliveryAgentPrivate::flushFrameSynchronousEvents(QQuickWindow *win) | | ~~~~~~~~~~~~~~^~~ | cc1plus: all warnings being treated as errors