QQuickDeliveryAgent: fix unused parameter on webOS

Doing a developer-build of QtDeclarative resulted an error on webOS
because a function parameter was not used at all. Adding a simple
Q_UNUSED() fixed this.

Fixes: QTBUG-103361
Change-Id: I5cf39495d8248abd5de8af5363cce0f07782fad5
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit cc902136c6693b14ac98e41046a2bfecc8f5911b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>